making styling changes need help with the background styles

--- a/app/views/activities.html
+++ b/app/views/activities.html
@@ -15,10 +15,26 @@
 </div>
 </head>
 <body>
-  <h2>Dive In and Explore!</h2>
-	<div class="lead">
-    <img src="images/smiledolphin.jpg" alt="Smiling Dolphin"><br>
-  </div> 
+  <section class="islands">
+    <article>
+      <figure>
+        <img src="images/bullisland.jpg" alt="Bull Island"/>
+        <figcaption>Bull Island</figcaption>
+      </figure>
+      <!-- <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/history"><br> -->
+      <hgroup>
+        <h2>JACK'S FAVORITE ISLANDS</h2>
+        <h3>Five Not to Miss</h3>
+      </hgroup>
+      <p>The Sea Islands are a chain of tidal and barrier islands on the Southeastern Atlantic Ocean coast of the United States. Numbering over 100, they are located between the mouths of the Santee and St. Johns Rivers along the coast of the US states of South Carolina, Georgia, and Florida.</p> 
+    </article>
+    <article>
+      <figure>
+        <img src="images/waties-island.jpg" alt="Waties Island"/>
+        <figcaption>Waites Island</figcaption>
+      </figure>
+      
+         
 <div class="footer">
   <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
 </div>
