--- a/app/views/history.html
+++ b/app/views/history.html
@@ -3,29 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SC Barrier Islands History Page</title>
+  <div class="header">
+  <ul class="nav nav-pills pull-right">
+    <li class=""><a ng-href="#/main">Home</a></li>
+    <li><a ng-href="#/history">History</a></li>
+    <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#">Explore</a></li>
+    <li><a ng-href="#/kackie">Edisto</a></li>
+  </ul>
+  <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
+</div>
 </head>
 <body>
 	<div class="wrapper">
     <header>
       <h1>The Story Behind The Barrier Islands</h1>
-      <nav>
-        <ul class="nav nav-pills pull-right">
-          <li class=""><a ng-href="#/main">Home</a></li>
-          <li><a ng-href="#">History</a></li>
-          <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
-          <li><a ng-href="#/activities">Explore</a></li>
-          <li><a ng-href="#/kackie">Edisto</a></li>
-        </ul>
-      </nav>
-    </header>
-
-  <!-- <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3> -->
-
-
-</head>
+      
 <body>
 	<p class="lead">
-    <img src="images/shemcreekevening8.4.14.jpg" alt="Shem Creek Beautiful Evening"><br>
+    <img src="images/scisles.jpg" alt="Shem Creek Beautiful Evening"><br>
   </p>
 
   <h3><a ng-href="http://www.southcarolinalowcountry.com/visitors/nature-tourism/beaches.html">The Barrier Islands</a></h3>
