--- a/app/views/kackie.html
+++ b/app/views/kackie.html
@@ -1,52 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+<div background=img src="images/steering.jpg" alt="Edisto Island"/>
 <head>
   <meta charset="UTF-8">
   <title>SC BARRIER ISLANDS PAGE</title>
-</head>
+  <head>
+  <meta charset="UTF-8">
+  <title>Edisto</title>
+  <div class="header">
+  <ul class="nav nav-pills pull-right">
+    <li class=""><a ng-href="#/main">Home</a></li>
+    <li><a ng-href="#/history">History</a></li>
+    <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#">Explore</a></li>
+    <li><a ng-href="#/kackie">Edisto</a></li>
+  </ul>
+  <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
+  </div>
+
+  </head>
 <body>
   <div class="wrapper">
     <header>
-      <h1>South Carolina Barrier Islands</h1>
-      <nav>
-        <ul class="nav nav-pills pull-right">
-          <li class=""><a ng-href="#/main">Home</a></li>
-          <li><a ng-href="#/history">History</a></li>
-          <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
-          <li><a ng-href="#/activities">Explore</a></li>
-          <li><a ng-href="#">Edisto</a></li>
-        </ul>
-      </nav>
+      <h1>Edisto Island</h1>
      </header> 
-  <!-- <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3> -->
   <br>
-    
+  
   </br>
-  <section class="islands">
-    <article>
-      <figure>
-        <img src="images/bullisland.jpg" alt="Bull Island"/>
-        <figcaption>Bull Island</figcaption>
-      </figure>
-      <!-- <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/history"><br> -->
-      <hgroup>
-        <h2>JACK'S FAVORITE ISLANDS</h2>
-        <h3>Five Not to Miss</h3>
-      </hgroup>
-      <p>The Sea Islands are a chain of tidal and barrier islands on the Southeastern Atlantic Ocean coast of the United States. Numbering over 100, they are located between the mouths of the Santee and St. Johns Rivers along the coast of the US states of South Carolina, Georgia, and Florida.</p> 
-    </article>
-    <article>
-      <figure>
-        <img src="images/waties-island.jpg" alt="Waties Island"/>
-        <figcaption>Waites Island</figcaption>
-      </figure>
-      <hgroup>
-        <h2>Beaches For Chillin'</h2>
-        <h3>Relaxation Is A Prerequiste</h3>
-      </hgroup>
+  
+      <h3>Relaxation Is A Prerequiste</h3>
+    
       <p>Edisto Island is one of South Carolina's Sea Islands, the larger part of which lies in Charleston County, with its southern tip in Colleton County. The Charleston County part is a census-designated place. The population was 2,301 at the 2000 census.The town of Edisto Beach is located in Colleton County.
       The island and town were named after the historic Edistow people, a Native American sub-tribe of the Cusabo Indians. They inhabited the island as well as nearby mainland areas.</p>
-    </article>
+    
     <article>
       <figure>
         <img src="images/steering.jpg" alt="Edisto Island"/>
@@ -64,10 +50,11 @@
   <aside>
       <section class="edisto-plantations">
         <h2>Edisto Plantations</h2>
-          <a href="http://en.wikipedia.org/wiki/Seaside_Plantation_House">Seaside Plantation House</a>
-          <a href="http://en.wikipedia.org/wiki/Peter%27s_Point_Plantation">Peter's Point Plantation</a>
-          <a href="http://en.wikipedia.org/wiki/Windsor_Plantation">Windsor Plantation</a>
-          <a href="http://en.wikipedia.org/wiki/Crawford%27s_Plantation_House">Crawford's Plantation House</a>
+          <ul>
+            <li><a href="http://en.wikipedia.org/wiki/Seaside_Plantation_House">Seaside Plantation House</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Peter%27s_Point_Plantation">Peter's Point Plantation</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Windsor_Plantation">Windsor Plantation</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Crawford%27s_Plantation_House">Crawford's Plantation House</a></li>
         </section>
         <section class="edistobeach-info">
           <h2>Edisto Beach</h2>
@@ -85,5 +72,6 @@
   </div>
 <!-- </div> .wrapper  -->
 </body>
+</div>
 </html>
 
