--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,38 +8,21 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     border: 10px solid gray;
 }
 
-// .browsehappy {
-//     margin: 0.2em 0;
-//     background: #ccc;
-//     color: #000;
-//     padding: 0.2em 0;
-// }
-
-/* Space out content a bit */
-// .body {
-//         background-image: url("../images/shemcreekevening8.4.14.jpg");
-//         background-size: cover;
-//         background-attachment: fixed;
-//         -webkit-background-size: cover;
-//         -moz-background-size: cover;
-//         -o-background-size: cover;
-//         margin: 0;
-//         padding: 0;
-//     }
+.html { 
+  background: url(images/steering.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
+}
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
-// .header,
-// .marketing,
-// .footer {
-//     padding-left: 0px;
-//     padding-right: 0px;
-//     font-size: 80%;
-// }
-
-/* Custom page header */
-// .header {
-//     border-bottom: 20px #4A52BB;
-// }
+.marketing {
+    padding-left: 0px;
+    padding-right: 0px;
+    font-size: 80%;
+}
 
 /* Make the masthead heading the same height as the navigation */
 .header {
@@ -47,6 +30,8 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     margin-bottom: 0;
     line-height: 40px;
     padding-bottom: 19px;
+    padding-left: 0px;
+    padding-right: 0px;
     height: 100px;
     background-image: url("images/steering.jpg");
     color: #eeeeee;
@@ -63,20 +48,16 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     color: #777;
     border-top: 1px solid #e5e5e5;
     text-shadow: 3px 3px 3px gray;
+    font-size: 80%;
 }
 
 .container-narrow > hr {
     margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
-// .jumbotron {
-//     text-align: center;
-//     border-bottom: 1px solid #39257c;
-// }
 
-// .jumbotron .btn {
-//     text-align: pull-right;
+// .btn {
+//     text-align: center;
 //     text-shadow: 5px;
 //     font-size: 21px;
 //     padding: 14px 24px;
@@ -138,11 +119,14 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
         background-color: #f9f8f6;
         background-image: url("images/boneyardbeachlynch.jpg");
         background-position:  center;
-        font-family: Georgia, Times, serif;
+        font-family: helvetica, Georgia, Times, sans-serif;
         line-height: 1.4em;
         margin: 0px;
+        width: 750;
     }
-
+    .btn-default{
+        position: center;
+        }
     .nav
     .footer
     {
@@ -150,6 +134,7 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
         color: #177f75;
         background-color: #aeaca8;
         height: 30px;
+        width: 750px;
     }
     .footer {
     padding-top: 19px;
@@ -230,10 +215,17 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     .h3 {
         margin: 0px 0px 10px 0px;
         color: #de6581;
+        font-style: oblique;
+        text-shadow: 3px 3px 3px gray;
     }
     .aside h2 {
         padding: 30px 0px 10px 0px;
         color: #de6581;
+    }
+    .p {
+        font-weight: bold;
+        font-style: oblique;
+        font-size: 18px;
     }
     .footer {
         font-size: 80%;
