--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,27 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>SC BARRIER ISLANDS PAGE</title>
+  <head>
+  <meta charset="UTF-8">
+  <title>ACTIVITIES</title>
+  <div class="header">
+  <ul class="nav nav-pills pull-right">
+    <li class=""><a ng-href="#/main">Home</a></li>
+    <li><a ng-href="#/history">History</a></li>
+    <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#">Explore</a></li>
+    <li><a ng-href="#/kackie">Edisto</a></li>
+  </ul>
+  <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
+</div>
+
 </head>
 <body>
   <div class="wrapper">
     <header>
       <h1>South Carolina Barrier Islands</h1>
-      <nav>
-        <ul class="nav nav-pills pull-right">
-          <li class=""><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/history">History</a></li>
-          <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
-          <li><a ng-href="#/activities">Explore</a></li>
-          <li><a ng-href="#/kackie">Edisto</a></li>
-        </ul>
-       </nav>
       </header> 
-  <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
+  <!-- <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3> -->
 
 
   <div class='body'>
       
-      <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/history"><br>
+      <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/history"/><br>
   
     <p><a class="btn btn-lg btn-default" ng-href="#/scbarrierislands">EXLORE THE ISLANDS!</a></p>
   </div>  
