--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,25 +25,26 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 }
 
 /* Make the masthead heading the same height as the navigation */
-.header {
+header {
     margin-top: 0;
     margin-bottom: 0;
     line-height: 40px;
     padding-bottom: 19px;
     padding-left: 0px;
     padding-right: 0px;
-    height: 100px;
+    height: 50px;
+    width: 1025px;
     background-image: url("images/steering.jpg");
-    color: #eeeeee;
+    color: midnight-blue;
     font-style: oblique;
     font-weight: bold;
     font-size: 125%;
     text-shadow: 7px 7px 7px gray;
-    background-color: #eeeeee;
+    background-color: greensea;
 }
 
 /* Custom page footer */
-.footer {
+footer {
     padding-top: 19px;
     color: #777;
     border-top: 1px solid #e5e5e5;
