renaming views html files adding postcard page

--- a/app/views/edisto.html
+++ b/app/views/edisto.html
@@ -3,8 +3,8 @@
     <li class=""><a ng-href="#/main">Home</a></li>
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
-    <li><a ng-href="#">Explore</a></li>
-    <li><a ng-href="#/kackie">Edisto</a></li>
+    <li><a ng-href="#/postcards">Postcards</a></li>
+    <li><a ng-href="#">Edisto</a></li>
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
@@ -23,7 +23,7 @@
     
     <article>
       <figure>
-        <img src="images/steering.jpg" alt="Edisto Island"/>
+        <img src="images/iopbeach.jpg" alt="Edisto Island"/>
         <figcaption>Edisto Island</figcaption>
       </figure>
       <hgroup>
