--- a/app/views/history.html
+++ b/app/views/history.html
@@ -8,8 +8,8 @@
     <li class=""><a ng-href="#/main">Home</a></li>
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
-    <li><a ng-href="#">Explore</a></li>
-    <li><a ng-href="#/kackie">Edisto</a></li>
+    <li><a ng-href="#/postcards">Postcards</a></li>
+    <li><a ng-href="#/edisto">Edisto</a></li>
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
