--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,19 +6,20 @@
   <head>
   <meta charset="UTF-8">
   <title>ACTIVITIES</title>
+  
+
+</head>
+<body>
   <div class="header">
   <ul class="nav nav-pills pull-right">
-    <li class=""><a ng-href="#/main">Home</a></li>
+    <li class=""><a ng-href="#">Home</a></li>
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
-    <li><a ng-href="#">Explore</a></li>
+    <li><a ng-href="#/postcards">Postcards</a></li>
     <li><a ng-href="#/kackie">Edisto</a></li>
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
-
-</head>
-<body>
   <div class="wrapper">
     <header>
       <h1>South Carolina Barrier Islands</h1>
