--- a/app/views/postcards.html
+++ b/app/views/postcards.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ACTIVITIES</title>
+	<title>Send a Postcard</title>
 	<div class="header">
   <ul class="nav nav-pills pull-right">
     <li class=""><a ng-href="#/main">Home</a></li>
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
-    <li><a ng-href="#">Explore</a></li>
-    <li><a ng-href="#/kackie">Edisto</a></li>
+    <li><a ng-href="#">Postcards</a></li>
+    <li><a ng-href="#/edisto">Edisto</a></li>
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
