all content added to history html page all links added to both images and h3s NOW need to format

--- a/app/views/history.html
+++ b/app/views/history.html
@@ -19,25 +19,60 @@
     <header>
       <h1>The Story Behind The Barrier Islands</h1>
       
-<body>
-	<p class="lead">
-    <img src="images/scisles.jpg" alt="Shem Creek Beautiful Evening"><br>
-  </p>
+
 
   <h3><a ng-href="http://www.southcarolinalowcountry.com/visitors/nature-tourism/beaches.html">The Barrier Islands</a></h3>
   <img src="images/barrierislandpic.jpeg">
-  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe!</p>
+  <p> A low-lying chain of sandy sea islands stretch from Florida north along the coastlines of Georgia and South Carolina. 
+
+  These beautiful islands are alive with wildlife of all description. Considered some of the best fishing venues in the southeastern United States, many of these isolated palm covered islands have stunning white sand beaches. 
+
+  The most visited, and most famous island in the chain is Hilton Head. It covers an area of 40 sq. miles, and includes miles of broad beaches, marinas, over two dozen championship golf courses, and more tennis courts than any other resort of its size. It's covered with resort communities, as well as a wide-variety of lodging venues. -Courtesy World Atlas
+  </p>
   
-  <h3><a ng-href="http://www.fws.gov/refuge/ACE_basin/">ACE Basin</a></h3>
-  <img src="images/acebasin.jpg">
-  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe!</p>
+  <h3><a ng-href="https://www.youtube.com/watch?v=JGQALvgITMs">ACE Basin</a></h3>
+  <a ng-href="https://www.youtube.com/watch?v=JGQALvgITMs"><img src="images/acebasin.jpg"></a>
+  <p> The Ashepoo, Combahee and South Edisto (ACE) Basin represents one of the largest undeveloped estuaries on the east coast of the United States. The ACE Basin consists of approximately 1.1 million acres of diverse habitats including pine and hardwood uplands, forested wetlands, fresh, brackish and salt water tidal marshes, barrier islands and beaches. The basin's unique estuarine system, the largest of its type in the state, provides invaluable habitat for a rich diversity of finfish and shellfish resources. The basin hosts a wealth of wildlife resources, including such endangered and threatened species as bald eagles, woodstorks, ospreys, loggerhead sea turtles and shortnose sturgeon, and offers a variety of recreational uses.
+
+  In the mid-1700s tidal swamps bordering the rivers were cleared and diked for rice culture. After the rice culture declined in the late 1800s, wealthy sportsmen purchased many of the plantations as hunting retreats. The new owners successfully managed the former ricefields and adjacent upland areas for a wide range of wildlife. This tradition of land stewardship has continued throughout the 20th century. Because of their importance to waterfowl, these former ricefields have been identified for protection under the North American Waterfowl Management Plan. The ACE Basin also has been designated as a world class ecosystem under The Nature Conservancy’s Last Great Places program.
+
+  In 1988, the ACE Basin Project was launched when Ducks Unlimited (DU), The Nature Conservancy (TNC), the South Carolina Department of Natural Resources (SCDNR), the U.S. Fish and Wildlife Service (USFWS) and private landowners formed a coalition known as the ACE Basin Task Force. Westvaco Corporation, the Lowcountry Open Land Trust (LOLT) and Nemours Wildlife Foundation joined the Task Force in 1998. The mission of the ACE Basin Project is to maintain the natural character of the basin by promoting wise resource management on private lands and protecting strategic tracts by conservation agencies. A major goal of the protection efforts is to ensure that traditional uses such as farming, forestry, recreational and commercial fishing and hunting will continue in the area.</p> -Courtesy AceBasin.net
 
   <h3><a ng-href="http://en.wikipedia.org/wiki/Category:Hurricanes_in_South_Carolina">Hurricane Season</a></h3>
- <img src="images/Hurricane_Hugo_15_September_1989_1105z.png">
-  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe!</p>
+  <a ng-href="http://radar.weather.gov/radar.php?product=NCR&rid=clx&loop=yes"><img src="images/Hurricane_Hugo_15_September_1989_1105z.png"></a>
+  <p> Historical Hurricanes in South Carolina
+
+  Hurricanes and tropical storms are irregular visitors to coastal South Carolina. In the period, 1901-2009, only 27 tropical cyclones have made landfall on the South Carolina coast. Of these, only eight were of Category 2 to Category 4 intensity. Since 1900, no Category 5 hurricanes have hit South Carolina. There have been two Category 4 hurricanes (Hazel, 1954, and Hugo, 1989) and two Category 3 hurricanes (September 17, 1945, and Gracie, 1959). It is possible that the "Great Storm of 1893" that struck the southern on coast on August 20 of that year was at least a Category 4 storm, but there was no way of accurately measuring tropical-cyclone intensity before 1900.
+
+  In the Colonial period tropical storms and hurricanes were known as "September gales," probably because the ones people remembered and wrote about were those which damaged or destroyed crops just before they were to be harvested.
+
+  One such storm that struck Charles Town on September 25, 1686, was "wonderfully horrid and destructive...Corne is all beaten down and lyes rotting on the ground... Aboundance of our hoggs and Cattle were killed in the Tempest by the falls of Trees..." The storm also prevented a Spanish assault upon Charles Town by destroying one of their galleys and killing the commander of the Spanish assault.
+
+  In autumn of 1700, "a dreadful hurricane happened at Charles Town which did great damage and threatened that total destruction of the Town, the lands on which it is built being low and level and not many feet about high water mark, the swelling sea rushed in with amazing impetuosity, and obliged the inhabitants to fly to shelter..." A ship, Rising Sun, out of Glasgow and filled with settlers had made port just prior to the storm's landfall. It was dashed to pieces and all on board perished.
+
+  Of a storm which passes inland along the coast September 7-9, 1854, Adele Pettigru Allston wrote from Pawleys Island, "The tide was higher than has been known since the storm of 1822. Harvest had just commenced and that damage to the crops in immense. From Waverly to Pee Dee not a bank nor any appearance of land was to be seen...(just) one rolling, dashing Sea, and the water was Salt as the Sea."
+
+  By 1893, major population centers could be telegraphically alerted to storms moving along the coast, but there were no warnings for the Sea Islands and other isolated areas. The "Great Storm of 1893" struck the south coast at high tide on August 28, pushing an enormous storm surge ahead of it and creating a "tidal wave" that swept over and submerged whole islands. Maximum winds in the Beaufort area were estimated to be 125 miles per hour, those in Charleston were estimated near 120 miles per hour. At least 2,000 people lost their lives, and an estimated 20,000-30,000 were left homeless and with no mean of subsistence. /p>
+
+  Hazel (October 1954) and Gracie (September 1959) have been the most memorable storms in recent years. Hazel, a Category 4 storm, made landfall near Little River, S.C., with 106-miles per hour winds and 16.9 foot storm surge. One person was killed and damage was estimated at $27 million.
+
+  Gracie, a Category 3 hurricane, made landfall on St. Helena Island and continued toward the north-northwest, maintaining hurricane strength for more than 100 miles inland. Heavy damage occurred along the coast from Beaufort to Charleston. Heavy rains caused flooding through much of the State and crop damage was severe.
+
+  Hugo (September 1989) made landfall near Sullivan's Island with 120 knot winds. It continued on a northwest track at 25-30 miles per hour and maintained hurricane force winds as far inland as Sumter. Hugo exited the State southwest of Charlotte, N.C., before sunrise on September 22. The hurricane caused 13 directly related deaths and 22 indirectly related deaths, and it injured several hundred people in South Carolina. Damage in the State was estimated to exceed $7 billion, including $2 billion in crop damage. The forests in 36 counties along the path of the storm sustained major damage.
+
+  From 1990 to 2009, South Carolina has only had three weak tropical cyclone landfalls along the coast: Tropical Storm Kyle (35 kts) in 2002, Hurricane Gaston (65 kts) and Hurricane Charley (70 kts) in 2004. During September 1999 Hurricane Floyd, a very large storm, came very close to the South Carolina coast, then made landfall near Cape Fear, North Carolina. Hurricane Floyd triggered mandatory coastal evacuations along the South Carolina coast. Heavy rain of more than 15 inches fell in parts of Horry County, S.C., causing major flooding along the Waccamaw River in and around the city of Conway for a month.
+  </p> -Courtesy www.dnr.sc.gov
   <h3><a ng-href="http://www.nps.gov/nr/testing/cultural_groups/Gullah_Geechee_Cultural_Heritage_Corridor.html">Gullah/Geechee Culture</a></h3>
-  <img src="images/gullahgeechieculture.jpg">
-  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe!</p>
+  <a ng-href="http://www.nationalheritageareas.us/Gullah_Geechee.html"><img src="images/gullahgeechieculture.jpg"></a>
+  <h4>Innovative Preservation, Education, Interpretation, and Awareness through Collaboration</h4>
+    <p>When the ratification of the 13th Amendment to the United States Constitution banned slavery in 1865, most of the African and American-born slaves along the southeastern coast remained in the region that had come to be their homes. Life on the barrier islands was quite isolated from that of the mainland and few outside visitors ever made contact with the newly freed communities. Because of this geographic isolation and a strong sense of cultural connection amongst the people, the African Americans who today self-identify as Gullah/Geechee retained their African heritage to a strong degree.
+
+    Most of the Gullah/Geechee still live in rural communities of low-level, vernacular buildings along the Low Country mainland coast and on the barrier islands. Towns are often dotted with dirt roads and traversed by oxen, mules, and horses. The Gullah/Geechee are the speakers of the only African-American Creole language that developed in the United States – one that combines elements of English and over 30 African dialects. Oral traditions, folklore, and storytelling are cultural traditions that have gone largely unchanged for generations. Religious ceremonies such as ring shouts, artisan crafts like sweet grass basket weaving, and culinary traditions such as “hoppin’ john” and sweet potato pie are all preserved as part of the lifeways of the Gullah/Geechee.
+
+    Recently life has changed for the Gullah/Geechee. The barrier islands were accessible only by boat until the building of the first bridges starting in the early 1950s. Since that time, many traditional Gullah/Geechee communities on the islands have been altered by cultural infiltration from mainlanders, or been lost entirely to real estate development. The advent of air-conditioning transformed the hot, humid islands into desirable, ocean-side property bringing outsiders into what was once solely Gullah or Geechee territory. Despite recent losses, the Gullah/Geechee people remain a testament to the power of human adaptability and cultural survival even in the face of outside pressures from the modern world.
+
+    The Gullah/Geechee Cultural Heritage Corridor protects, bolsters, and showcases the traditional Gullah/Geechee culture that remains in the region, and its relation to the overall history of slavery, plantations, abolition and emancipation in the South. Several cultural and educational institutions interpret this heritage for visitors. Geechee Kunda is a museum and community education center in Riceboro, Georgia, which features exhibits, galleries, classes and events about Geechee culture, a gift shop, and a family research center. For more information, call 912-884-4440. The Avery Research Center for African-American History and Culture in Charleston, South Carolina focuses on Gullah heritage in the Low Country as well as the wider theme of the African Diaspora in America. The center offers exhibits, public programming, tours, and an extensive archival collection. Call 843-953-7609 for upcoming events and information.
+    </p> -Courtesy of the National Park Service & Gullah-Geechee Cultural Heritage Corridor
 
 <div class="footer">
   <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
