--- a/app/views/edisto.html
+++ b/app/views/edisto.html
@@ -1,4 +1,9 @@
-<div class="header">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Edisto</title>
+  <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class=""><a ng-href="#/main">Home</a></li>
     <li><a ng-href="#/history">History</a></li>
@@ -8,7 +13,7 @@
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
-
+</head>
     <header>
       <h1>Edisto Island</h1>
      </header> 
