ahhhhhh YES ADDING IN THE SAMPLES FEEL US SHAKIN VID ON YOUTUBE when you click on edisto island

--- a/app/views/edisto.html
+++ b/app/views/edisto.html
@@ -15,7 +15,7 @@
 </div>
 </head>
     <header>
-      <h1>Edisto Island</h1>
+      <h1><a ng-href="https://www.youtube.com/watch?v=9xLppiPwtKs&list=PLVDFIXltczSy5lH7UN7Rm5Yx1K53lQTW4">Edisto Island</a></h1>
      </header> 
   <br>
   
