--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -28,6 +28,7 @@ header {
     height: 50px;
     width: 1025px;
     color: white;
+    font-family: helvetica;
     font-style: oblique;
     font-weight: bold;
     font-size: 125%;
@@ -41,6 +42,7 @@ footer {
     border-top: 1px solid #e5e5e5;
     text-shadow: 3px 3px 3px gray;
     font-size: 80%;
+    font-family: helvetica;
 }
 
 .container-narrow > hr {
