--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,13 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>SC BARRIER ISLANDS PAGE</title>
-  <head>
   <meta charset="UTF-8">
   <title>ACTIVITIES</title>
-  
-
 </head>
-<body>
+
   <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class=""><a ng-href="#">Home</a></li>
@@ -18,27 +15,29 @@
     <li><a ng-href="#/postcards">Postcards</a></li>
     <li><a ng-href="#/kackie">Edisto</a></li>
   </ul>
-  <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
-</div>
-  <div class="wrapper">
-    <header>
-      <h1>South Carolina Barrier Islands</h1>
-      </header> 
-  <!-- <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3> -->
-
-
-  <div class='body'>
-      
-      <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/history"/><br>
-  
-    <p><a class="btn btn-lg btn-default" ng-href="#/scbarrierislands">EXLORE THE ISLANDS!</a></p>
-  </div>  
-
-
-
-  <div class="footer">
-  <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
   </div>
+
+<div class="wrapper">
+  <header>
+    <h1>South Carolina Barrier Islands</h1>
+  </header> 
+  
+  <body>
+
+  <div class="figure">
+      
+     
+  </div>  
+  <div class="figcaption">
+    <h2>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h2>
+  </div>
+
+
+
+  
   <!-- </div> .wrapper -->
 </body>
+<div class="footer">
+  <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
+  </div>
 </html>
