--- a/app/views/postcards.html
+++ b/app/views/postcards.html
@@ -15,24 +15,72 @@
 </div>
 </head>
 <body>
-  <section class="islands">
-    <article>
-      <figure>
-        <img src="images/bullisland.jpg" alt="Bull Island"/>
-        <figcaption>Bull Island</figcaption>
-      </figure>
-      <!-- <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/history"><br> -->
-      <hgroup>
-        <h2>JACK'S FAVORITE ISLANDS</h2>
-        <h3>Five Not to Miss</h3>
-      </hgroup>
+  <hgroup>
+  
+    <h2>JACK'S FAVORITE ISLANDS</h2>
+        
+  </hgroup>
+   <article>   
       <p>The Sea Islands are a chain of tidal and barrier islands on the Southeastern Atlantic Ocean coast of the United States. Numbering over 100, they are located between the mouths of the Santee and St. Johns Rivers along the coast of the US states of South Carolina, Georgia, and Florida.</p> 
     </article>
+<section class="islands">
+    <br>
+
+    </br>
     <article>
       <figure>
         <img src="images/waties-island.jpg" alt="Waties Island"/>
         <figcaption>Waites Island</figcaption>
       </figure>
+    </article>
+    <br>
+
+    </br>
+  
+    <article>
+      <figure>
+        <img src="images/bullisland.jpg" alt="Bull Island"/>
+        <figcaption>Bull Island</figcaption>
+      </figure>
+    </article>
+    <br>
+
+    </br>
+    <article>
+      <figure>
+        <img src="images/boneyardbeachlynch.jpg" alt="Boneyard Beach"/>
+        <figcaption>Boneyard Beach</figcaption>
+      </figure>
+    </article>
+    <br>
+
+    </br>
+    <article>
+      <figure>
+        <img src="images/edistosunset.jpg" alt="Edisto Sunset"/>
+        <figcaption>Edisto Sunset</figcaption>
+      </figure>
+    </article>
+    <br>
+
+    </br>
+    <article>
+      <figure>
+        <img src="images/iopbeach.jpg" alt="IOP Beach"/>
+        <figcaption>Isle of Palms</figcaption>
+      </figure>
+    </article>
+    <br>
+
+    </br>
+    <article>
+      <figure>
+        <img src="images/sand_sea.jpg" alt="Sand and Sea"/>
+        <figcaption>Sand and Sea</figcaption>
+      </figure>
+    </article>
+  </section>
+      
       
          
 <div class="footer">
