--- a/app/views/edisto.html
+++ b/app/views/edisto.html
@@ -21,17 +21,22 @@
   
   </br>
   
-      <h3>Relaxation Is A Prerequiste</h3>
+      <h2>Relaxation Is A Prerequiste</h2>
     
       <p>Edisto Island is one of South Carolina's Sea Islands, the larger part of which lies in Charleston County, with its southern tip in Colleton County. The Charleston County part is a census-designated place. The population was 2,301 at the 2000 census.The town of Edisto Beach is located in Colleton County.
       The island and town were named after the historic Edistow people, a Native American sub-tribe of the Cusabo Indians. They inhabited the island as well as nearby mainland areas.</p>
     
     <article>
       <figure>
-        <img src="images/iopbeach.jpg" alt="Edisto Island"/>
+        <img src="images/edistosunset.jpg" alt="Edisto Island"/>
         <figcaption>Edisto Island</figcaption>
       </figure>
       <hgroup>
+        
+        <br>
+
+        </br>
+
         <h2>History of Edisto</h2>
         <h3>Edisto National Register of Historic Places</h3>
       </hgroup>
