--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,28 +16,59 @@
     <li><a ng-href="#/kackie">Edisto</a></li>
   </ul>
   </div>
-
+<body>
 <div class="wrapper">
   <header>
     <h1>South Carolina Barrier Islands</h1>
   </header> 
   
-  <body>
+  
 
   <div class="figure">
-      
-     
+      <div class="figcaption">
+        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
+      </div>
   </div>  
-  <div class="figcaption">
-    <h2>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h2>
-  </div>
+
+  <div class="figure">
+      <div class="figcaption">
+        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
+      </div>
+  </div>  
+
+  <div class="figure">
+      <div class="figcaption">
+        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
+      </div>
+  </div>  
+
+  <div class="figure">
+      <div class="figcaption">
+        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
+      </div>
+  </div>  
+
+  <div class="figure">
+      <div class="figcaption">
+        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
+      </div>
+  </div>  
+
+  <div class="figure">
+      <div class="figcaption">
+        <h3>THIS IS WHERE YOU'RE GOING TO PUT SOME TEXT</h3>
+      </div>
+  </div>  
+  
 
 
 
   
   <!-- </div> .wrapper -->
+
+
 </body>
-<div class="footer">
+<footer>
   <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
-  </div>
+</footer>
 </html>
